Update index.html 3-02-26
แก้เป็นลิง xbuilts99

--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                 <button onclick="switchDocType('po')" class="px-4 py-2 rounded-lg text-xs font-bold bg-blue-900/40 hover:bg-blue-800 transition whitespace-nowrap text-blue-300">ใบสั่งซื้อ (PO)</button>
                 <button onclick="switchDocType('pr')" class="px-4 py-2 rounded-lg text-xs font-bold bg-emerald-900/40 hover:bg-emerald-800 transition whitespace-nowrap text-emerald-300">ใบขอซื้อ (PR)</button>
                 <div class="flex items-center gap-3">
-                    <a href="https://xbuilts99-ux.github.io/xbuilts-system/account" target="_blank" rel="noopener noreferrer"
+                    <a href="https://crm.xbuilts99.com" target="_blank" rel="noopener noreferrer"
                        class="flex items-center gap-2 bg-purple-600 hover:bg-purple-500 px-4 py-2 rounded-xl text-sm font-bold transition">
                         <i data-lucide="calculator" class="w-4 h-4"></i> ทำบัญชี
                     </a>
-                    <a href="https://xbuilts99-ux.github.io/xbuilts-system/crm" target="_blank" rel="noopener noreferrer"
+                    <a href="http://account.xbuilts99.com" target="_blank" rel="noopener noreferrer"
                        class="flex items-center gap-2 bg-indigo-600 hover:bg-indigo-500 px-4 py-2 rounded-xl text-sm font-bold transition">
                         <i data-lucide="users" class="w-4 h-4"></i> ข้อมูลลูกค้า
                     </a>
