--- a/crm.html
+++ b/crm.html
@@ -150,7 +150,7 @@
            <tr>
             <th class="p-3">ชื่อโครงการ</th>
             <th class="p-3 text-center">สถานะ</th>
-            <th class="p-3 text-right">มูลค่า (ก่อน VAT)</th>
+            <th class="p-3 text-right">มูลค่า (รวม VAT)</th>
            </tr>
           </thead>
           <tbody id="recent-projects-list" class="divide-y divide-slate-100"></tbody>
@@ -583,3 +583,4 @@
     </script>
  </body>
 </html>
+
